--- a/css/contact.css
+++ b/css/contact.css
@@ -35,6 +35,7 @@ textarea {
   border-color: #494949;
   border-style: solid;
   font-size: 20px;
+  border-radius: 0;
 }
 
 /* classes */
@@ -61,7 +62,7 @@ textarea {
   text-align: center;
 }
 
-@media (max-width: 740px) {
+@media (max-width: 960px) {
   form,
   .success {
     max-width: 80%;
