--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,16 @@ a {
 }
 
 header {
+  background-color: #dedede;
+  padding: 16px 0;
+}
+
+header div {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   justify-content: space-between;
-  background-color: #dedede;
-  padding: 16px 80px;
+  margin: 0 80px;
   align-items: center;
 }
 
@@ -119,7 +123,15 @@ footer i {
   border-width: 2px;
 }
 
-@media (max-width: 740px) {
+@media (max-width: 960px) {
+  h1 {
+    font-size: 32px;
+  }
+  /* 
+  header {
+    padding: 16px 32px;
+  } */
+
   header label {
     display: block;
   }
